testsuite/tests/typecheck/should_fail/T18640a.stderr
T18640a.hs:12:1: error: [GHC-83865]
    • Couldn't match expected kind: forall (b :: k). * -> *
                  with actual kind: forall (b :: k). * -> a
    • In the type family declaration for ‘F2’

